--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,4 @@ UpgradeLog*.XML
 /src/.vs/EdisonTalk.AI.Agents/v17/.futdcache.v2
 /src/.vs/EdisonTalk.AI.Agents/v17/DocumentLayout.json
 /src/EDT.RagAssistant.Portal/appsettings.Secrets.json
+/src/EDT.RagAssistant.Portal/appsettings.Development.json
